This commit implements:  - Correction of the logo alignment on the dashboard page;  - Devices and templates column displayed on separate lines on the dashboard screen;  - Adding text along with icon in dropdown menu;  - Adjust metrics to take better advantage of space.

--- a/src/sass/_ddashboard.scss
+++ b/src/sass/_ddashboard.scss
@@ -418,6 +418,15 @@
         }
       }
     }
+    .main-header{
+      .photo-big{
+        .circle-after{
+          img{
+            bottom: 0px;
+          }
+        }
+      }
+    }
   }
 }
 
